--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,13 +2,11 @@
 <link href="/css/style.css" rel="stylesheet" type="text/css">
 <link href="/css/popout.css" rel="stylesheet" type="text/css">
 <link href="/css/form.css" rel="stylesheet" type="text/css">
-<%# <link href="https://fonts.googleapis.com/css?family=Sarala:700" rel="stylesheet"> %>
-<script async src="//pagead2.googlesyndication.com/
-pagead/js/adsbygoogle.js"></script>
-<script>
-	(adsbygoogle = window.adsbygoogle || []).push({
-		google_ad_client: "pub-6155541144115833",
-		enable_page_level_ads: true
-	});
-</script>
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
 <script src="/js/index.js"></script>
