--- a/views/pages/sign_up.ejs
+++ b/views/pages/sign_up.ejs
@@ -20,5 +20,6 @@
 	</div>
 	<script src="/js/check.js"></script>
 	<script src="/js/create_table.js"></script>
+	<script src="/js/index.js"></script>
 
 </html>
