--- a/views/pages/unavaliable.ejs
+++ b/views/pages/unavaliable.ejs
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html>
 
-	<head>
-		<% include ../partials/head %>
-		<title>
-			Unavaliable | Homework Master
-		</title>
-	</head>
+<head>
+	<% include ../partials/head %>
+	<title>
+		Unavaliable | Homework Master
+	</title>
+</head>
 
-	<body>
-		<div class="header">
-			<h1>Unavaliable</h1>
+<body>
+	<div class="header">
+		<h1>Unavaliable</h1>
+	</div>
+	<div class="content">
+		<div class="post">
+			You cannot see this page because you do not have access to this group, or it does not exist.
+			<div class="link" id="/login">Login here</div>
+			<div class="link" id="/">Home</div>
 		</div>
-		<div class="content">
-			<div class="post">
-				You cannot see this page because you do not have access to this group, or it does not exist.
-				<div class="link" id="/login">Login here</div>
-				<div class="link" id="/">Home</div>
-			</div>
-		</div>
-		<% include ../partials/menu %>
-	</body>
+	</div>
+	<% include ../partials/menu %>
+	<script src="/js/index.js"></script>
+</body>
 
 </html>
