--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
 
-	<head>
-		<% include ../partials/head %>
-		<title>Login | Homework Master</title>
-	</head>
+<head>
+	<% include ../partials/head %>
+	<title>Login | Homework Master</title>
+</head>
 
-	<body>
-		<div class="header">
-			<h1>Login</h1>
-		</div>
-		<div class="content">
-			<% include ../forms/login %>
-		</div>
-		<% include ../partials/menu %>
-		<script src="/js/check.js"></script>
-	</body>
+<body>
+	<div class="header">
+		<h1>Login</h1>
+	</div>
+	<div class="content">
+		<% include ../forms/login %>
+	</div>
+	<% include ../partials/menu %>
+	<script src="/js/check.js"></script>
+	<script src="/js/index.js"></script>
+</body>
 
 </html>
