--- a/views/forms/timetable.ejs
+++ b/views/forms/timetable.ejs
@@ -29,8 +29,7 @@
 		<%}%>
 
 		<% }) %>
-		Please check that your timetable matches.
-		<input class="important-link signup-modal" type="button" value="OK">
+		<input class="important-link signup-modal" type="button" value="OK" style="grid-column: 1/-1;">
 </form>
 
 <div id="signup-modal" class="modal">
