--- a/views/pages/invite.ejs
+++ b/views/pages/invite.ejs
@@ -17,7 +17,12 @@
 			<div class="title">
 				<%= group.school_name%>
 				year
-				<%= group.year%> <br> click to open discord
+				<%= group.year%>
+				<br>
+				Click to open Discord
+				<br>
+				Or use the invite code
+				<%= invite.code%>
 			</div>
 			<div class="author">
 				created by:
