--- a/views/pages/unavaliable.ejs
+++ b/views/pages/unavaliable.ejs
@@ -15,8 +15,8 @@
 	<div class="content">
 		<div class="post">
 			You cannot see this page because you do not have access to this group, or it does not exist.
-			<div class="link" id="/login">Login here</div>
-			<div class="link" id="/">Home</div>
+			<a href="/login">Login here</a>
+			<a href="/">Home</a>
 		</div>
 	</div>
 	<% include ../partials/menu %>
