--- a/views/pages/invite.ejs
+++ b/views/pages/invite.ejs
@@ -19,7 +19,7 @@
 				year
 				<%= group.year%>
 				<br>
-				Click to open Discord
+				<a href="<%= invite.url%>" target="_blank">Click to open Discord</a>
 				<br>
 				Or use the invite code
 				<%= invite.code%>
