--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -11,16 +11,28 @@
 		<h1>Homework Master</h1>
 	</div>
 	<div class="content">
-		<% for (i = 0; i < 10; i++){%>
 		<div class="post">
-			<div class="title">Join Uplands year 11 now!</div>
-			<div class="author">created by <a href="#">me</a></div>
+			<div class="title">Under construction!</div>
+			<div class="author">created by Tristan Beedell</div>
 			<div class="message">
-				Testing post!
-				<a href="/join?choice=506096692102430720">join now</a>
+				<p>
+					This website is still under construction. Feel free to tell me what you think of it so far though. Any ideas and insights are welcome.
+					<a href="/help#contact">contact me with any ideas</a>
+				</p>
+				<p>
+					The idea is that (eventually) you will be able to sign up and enter the classes that you attend into this site. This will then be used to add you into chatrooms for each of those classes. Work is easier if we all help each other out. <b>No one will be left out.</b>
+				</p>
+				<p>
+					You may log in with my test account:
+					<div class="lookup">
+						<div>Username:</div>
+						<div>testingacc</div>
+						<div>Password:</div>
+						<div>password</div>
+					</div>
+				</p>
 			</div>
 		</div>
-		<%}%>
 	</div>
 	<% include ../partials/menu %>
 	<script src="/js/index.js"></script>
