--- a/views/pages/my_profile.ejs
+++ b/views/pages/my_profile.ejs
@@ -4,7 +4,7 @@
 <head>
 	<% include ../partials/head %>
 	<title>
-		<%= name%>'s Profile | Homework Master
+		My Profile | Homework Master
 	</title>
 </head>
 
