--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,22 +1,24 @@
-form {
+form, .lookup {
   display: grid;
-  grid-template-columns: 10em 1fr;
-  grid-gap: 1em;
+  grid-template-columns: 1fr 3fr;
+  padding: 0.7em;
+  background-color: gainsboro;
+  color: darkslategray;
   margin: 1em;
-  padding: 1em;
-  background-color: beige;
+  border-radius: 0.3em;
+  grid-row-gap: 0.5em;
 }
 
 input {
   height: min-content;
 }
 
-input:focus {
-  outline: 2px solid gold;
+select {
+  border-radius: 1px;
 }
 
-form label {
-  text-align: right;
+select:focus, input:focus {
+  border: 2px solid #569da08e
 }
 
 .error {
