--- a/views/pages/help.ejs
+++ b/views/pages/help.ejs
@@ -3,15 +3,15 @@
 
 <head>
 	<% include ../partials/head %>
-	<title>Homework Master</title>
+	<title>Help | Homework Master</title>
 </head>
 
 <body>
 	<div class="header">
-		<h1>Homework Master</h1>
+		<h1>Help</h1>
 	</div>
 	<div class="content">
-		<div class="post">
+		<div class="post" id="FAQ">
 			<div class="title">Have a question?</div>
 			<div class="message">
 				<a class="no-swipe" href="#contact">Please contact me.</a>
@@ -23,13 +23,19 @@
 				<a class="no-swipe" href="https://github.com/tristanbeedell/homework-master" target="_blank">Visit my github repository from here!</a>
 			</div>
 		</div>
+		<div class="post" id="bot">
+			<div class="title">Bot Help</div>
+			<div class="message">
+				<a href="/help/bot">help with the bot can be found here.</a>
+			</div>
+		</div>
 		<div class="post" id="contact">
 			<div class="title">Contact</div>
-			<div class="authon">Made by Tristan Beedell</div>
+			<div class="author">Made by Tristan Beedell</div>
 			<div class="message">
 				<div class="lookup">
 					<div>email</div>
-					<div>tristanbeedell@protonmail.com</div>
+					<div>admin@homework-master.co.uk</div>
 
 					<div>discord</div>
 					<div>tristan#4101</div>
