--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -52,7 +52,8 @@
 				</div>
 				<div class="menu-content">
 					<a href="/help">FAQ</a>
-					<a href="/help#contact">contact</a>
+					<a href="/help/bot">Bot Help</a>
+					<a href="/help#contact">Contact</a>
 				</div>
 			</div>
 		</div>
