updated unavaliable page to support redirects on login

--- a/views/pages/unavaliable.ejs
+++ b/views/pages/unavaliable.ejs
@@ -15,7 +15,7 @@
 	<div class="content">
 		<div class="post">
 			You cannot see this page because you do not have access to this group, or it does not exist.
-			<a href="/login">Login here</a>
+			<a href="/login?redirect=<%= redirect || '/'%>">Login here</a>
 			<a href="/">Home</a>
 		</div>
 	</div>
