popouts fixed on mobile (iOS tested)

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -21,6 +21,10 @@ select {
   background-color: white;
 }
 
+:focus {
+  outline: none;
+}
+
 select:active, input:active {
   border: 2px solid gray !important;
 }
