--- a/public/css/form.css
+++ b/public/css/form.css
@@ -7,6 +7,8 @@ form, .lookup {
   margin: 1em;
   border-radius: 0.3em;
   grid-row-gap: 0.5em;
+  overflow-x: scroll;
+  min-width: 300px;
 }
 
 input {
