--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,7 @@ body {
 
 html, body {
 	overflow-x: hidden;
+	scroll-behavior: smooth;
 }
 
 .page-wipe {
@@ -95,6 +96,7 @@ div.content {
 		"author"
 		"message"
 		"foot";
+	overflow-x: scroll;
 }
 
 .snippet {
