--- a/public/css/popout.css
+++ b/public/css/popout.css
@@ -82,11 +82,11 @@
 
 @keyframes slide-down {
 	from {
-		margin-top: -100%;
+		margin-top: -100vh;
 	}
 
 	to {
-		margin-top: 30%;
+		margin-top: 30vh;
 	}
 }
 
