--- a/views/pages/timetable.ejs
+++ b/views/pages/timetable.ejs
@@ -12,29 +12,31 @@
 	</div>
 	<div class="content">
 		<% include ../forms/timetable %>
-		<table id="table" style="width: 100%; height: 300px;">
-			<tr>
-				<th colspan="10">Your Timetable</th>
-			</tr>
-			<tr>
-				<th colspan="5">1</th>
-				<th colspan="5">2</th>
-			</tr>
-			<tr>
-				<%['mon',	'tues', 'wed', 'thurs', 'fri', 'mon', 'tues', 'wed', 'thurs', 'fri'].forEach(day => { %>
-				<th>
-					<%= day%>
-				</th>
-				<% })%>
-			</tr>
-			<% for (let i = 0; i < 5; i++) { %>
-			<tr>
-				<% for (let i = 0; i < 10; i++) { %>
-				<td></td>
-				<% }%>
-			</tr>
-			<%}%>
-		</table>
+		<div class="post">
+			<table id="table" style="width: 100%; height: 300px;">
+				<tr>
+					<th colspan="10">Your Timetable</th>
+				</tr>
+				<tr>
+					<th colspan="5">1</th>
+					<th colspan="5">2</th>
+				</tr>
+				<tr>
+					<%['mon',	'tues', 'wed', 'thurs', 'fri', 'mon', 'tues', 'wed', 'thurs', 'fri'].forEach(day => { %>
+					<th>
+						<%= day%>
+					</th>
+					<% })%>
+				</tr>
+				<% for (let i = 0; i < 5; i++) { %>
+				<tr>
+					<% for (let i = 0; i < 10; i++) { %>
+					<td></td>
+					<% }%>
+				</tr>
+				<%}%>
+			</table>
+		</div>
 	</div>
 	<div class="page-wipe">
 		<div class="loader-container">
