--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -12,24 +12,12 @@
 	</div>
 	<div class="content">
 		<div class="post">
-			<div class="title">Under construction!</div>
+			<div class="title">Almost ready!</div>
 			<div class="author">created by Tristan Beedell</div>
 			<div class="message">
 				<p>
-					This website is still under construction. Feel free to tell me what you think of it so far though. Any ideas and insights are welcome.
+					This website has been a lot of work, but still has a way to go. Feel free to tell me what you think of it so far. Any ideas and insights are welcome.
 					<a href="/help#contact">contact me with any ideas</a>
-				</p>
-				<p>
-					The idea is that (eventually) you will be able to sign up and enter the classes that you attend into this site. This will then be used to add you into chatrooms for each of those classes. Work is easier if we all help each other out. <b>No one will be left out.</b>
-				</p>
-				<p>
-					You may log in with my test account:
-					<div class="lookup">
-						<div>Username:</div>
-						<div>testingacc</div>
-						<div>Password:</div>
-						<div>password</div>
-					</div>
 				</p>
 			</div>
 		</div>
