--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+	<% if (member.id == session.user.member_id) { %>
+	THIS IS YOUR PROFILE
+	<% } %>
 	<div class="header">
 		<h1>
 			<img src="<%= member.user.avatarURL %>" class="profilePic"></img>
