--- a/views/pages/bot_help.ejs
+++ b/views/pages/bot_help.ejs
@@ -3,7 +3,7 @@
 
 <head>
 	<% include ../partials/head %>
-	<title>Bot Help Homework Master</title>
+	<title>Bot Help | Homework Master</title>
 </head>
 
 <body>
