--- a/views/forms/timetable.ejs
+++ b/views/forms/timetable.ejs
@@ -33,8 +33,9 @@
 
 
 		<div id="signup-modal" class="modal">
-			<div class="signup-modal slide-down">
-				<div>You are about to create your account.</div>
+			<div class="signup-modal slide-down modal-content">
+				<div>You are about to create your account.<br>
+				Make sure your timetable matches. Please report any missing classes so they can be added.</div>
 				<span class="close">&times;</span>
 				<input type="submit" value="Continue" />
 			</div>
